<resources>
    <string name="app_name">Binar App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_register_disini">Belum punya akun? register disini</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student">Student</string>
    <string name="material">Material</string>
    <string name="profile">Profile</string>
    <string name="simpan">Simpan</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="nama_dan_email_harus_diisi">Nama dan email harus diisi</string>
</resources>
